Working On HowTo Page Bottom Section

--- a/howto.html
+++ b/howto.html
@@ -332,6 +332,51 @@
                             </div>
                         </div>
                     </div>
+                    <div class="howto-contact-section">
+                        <div class="custom-container">
+                            <div class="howto-contact-sub">
+                                <div class="regular-head2">
+                                    <div class="regular-head2-wrapper">
+                                        <h2>ご相談や詳しい内容につきましてはこちらからお問い合わせください！</h2>
+                                    </div>
+                                </div>
+                                <div class="howto-contact-content">
+                                    <div class="custom_row">
+                                        <div class="custom_col_6 columnn">
+                                            <div class="content-bx">
+                                                <div class="head">
+                                                    <div class="icon">
+                                                        <img src="images/icon-call-blue.png"/>
+                                                    </div>
+                                                    <div class="txt">
+                                                        <h4>電話でお問い合わせ</h4>
+                                                    </div>
+                                                </div>
+                                                <div class="content-number">
+                                                    <p>06-6390-7500</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="custom_col_6 columnn">
+                                            <div class="content-bx">
+                                                <div class="head">
+                                                    <div class="icon">
+                                                        <img src="images/icon-mail-blue.png"/>
+                                                    </div>
+                                                    <div class="txt">
+                                                        <h4>メールでお問い合わせ</h4>
+                                                    </div>
+                                                </div>
+                                                <div class="content-mail">
+                                                    <p>お問い合わせフォームへ</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <!-- PURCHASE|SALE LAYER : END -->
@@ -378,8 +423,8 @@
                 </div>
             </div>
         </footer>
+        <!-- FOOTER : END -->
     </main>
-    <!-- FOOTER : END -->
 
     <script src="js/jquery.min.js"></script>
     <script src="js/fonts-awesome-5.js"></script>
