Add Comment To All Page

--- a/howto.html
+++ b/howto.html
@@ -59,7 +59,7 @@
             </div>
             <!-- REGULAR HEADING : END -->
 
-            <!-- PURCHASE|SALE LAYER : START -->
+            <!-- PURCHASE|SALE(HOWTO PAGE) : START -->
             <section class="purchase-sale-layer">
                 <div class="custom_container">
                     <div class="purchase-sale-topbar-bttns">
@@ -208,13 +208,13 @@
                                 <div class="col-inner">
                                     <div class="purchase-sale-box">
                                         <div class="head">
-                                            <h3>投資用不動産の購入</h3>
+                                            <h3>投資用不動産の売却</h3>
                                         </div>
                                         <div class="other-cont">
                                             <div class="para">
-                                                <p>独自の流通網とノウハウをもとに優良中古物件をご紹介いたします。お客様にとって物件を購入
-                                                    することはスタートであり、ゴールではありません。ゴードンエステイトではスタート（購入）
-                                                    から賃貸運営・管理だけでなく、ゴール（売却・出口戦略）まで一貫してサポートいたします。</p>
+                                                <p>不動産投資は出口戦略を見極めて行うものです。ゴードンエステイトでは、投資不動産の仲介を
+                                                    主力事業としており、売主様の満足を徹底的に追及しています。営業担当が売却物件を迅速かつ
+                                                    的確に調査し、その物件を最も評価していただける購入希望者様をご紹介いたします。</p>
                                             </div>
                                             <div class="custom_tabs" id="re_sale">
                                                 <!-- <div class="custom_tabs_nav"> -->
@@ -379,7 +379,7 @@
                     </div>
                 </div>
             </section>
-            <!-- PURCHASE|SALE LAYER : END -->
+            <!-- PURCHASE|SALE(HOWTO PAGE) : END -->
         </section>
         <!-- PURCHASE/SALE PAGE : END -->
 
