Start Company Page

--- a/company.html
+++ b/company.html
@@ -46,7 +46,7 @@
             <!-- REGULAR-BANNER : START -->
             <section class="regular-banner">
                 <div class="regular-banner-wrapper">
-                    <img src="images/purchase-sale-banner.jpg" class="regular-banner-img" />
+                    <img src="images/company-page-banner.jpg" class="regular-banner-img" />
                 </div>
             </section>
             <!-- REGULAR-BANNER : END -->
@@ -54,13 +54,15 @@
             <!-- REGULAR HEADING : START -->
             <div class="regular-head margin-top-minus">
                 <div class="regular-head-wrapper">
-                    <h2>ご購入・ご売却について</h2>
+                    <h2>会社案内</h2>
                 </div>
             </div>
             <!-- REGULAR HEADING : END -->
 
             <!-- COMPANY PAGE : START -->
-            <section class="company-page-section"></section>
+            <section class="company-page-section">
+
+            </section>
             <!-- COMPANY PAGE : END -->
         </section>
         <!-- PURCHASE/SALE PAGE : END -->
