Design Changes HowTo Page @SanjayBarad

--- a/company.html
+++ b/company.html
@@ -61,7 +61,145 @@
 
             <!-- COMPANY PAGE : START -->
             <section class="company-page-section">
+                <div class="custom_container">
+                    <div class="custom_row">
+                        <div class="custom_col_12 columnn">
+                            <div class="columnn-inner">
+                                <div class="company-page-layer">
+                                    <div class="head">
+                                        <h3>経営理念</h3>
+                                    </div>
+                                    <div class="other-content">
+                                        <h4>情熱が創るソリューション</h4>
 
+                                        <h5>一、不動産投資に新しい価値を生み出し、お客様に最適なソリューションと圧倒的信頼感を
+                                            　　提供します。</h5>
+                                        <p>景気や市況に左右されやすい不動産価値とその運用方法。所有している不動産を今後どのように運用
+                                            していったらいいのか、どれくらいの価格で売却できるのか、どのような方法で売却をするのか、
+                                            不動産をお持ちの方なら誰もが一度は考え悩む事です。当社では、そんなお客様に寄り添い豊富な経
+                                            験と情報をもとに的確なご提案を行い、同時に圧倒的信頼関係を築けるよう努めてまいります。当社
+                                            スタッフとの出会いから始まる付加価値を、今までにない圧倒的信頼感をご体感ください。</p>
+
+                                        <h5>一、お客様に満足されることは当然と考え、想像を超えるサービス、感動を提供します。</h5>
+                                        <p>当社でお客様が経験されるもの、それは不安が解消された心地よさ、満ち足りた幸福感そしてお客様
+                                            が言葉にされない願望やニーズをも先読みしてお応えするサービスの心です。その為に現状に満足せ
+                                            ず、常に「感性」を磨き向上意識を持って仕事をします。</p>
+
+                                        <h5>一、全従業員が日々研鑽に励み、プロフェッショナルとして自信と誇りを持って行動をします。</h5>
+                                        <p>「人財」こそが当社の最大の財産だと考えています。資格取得、社内研修会やOJT研修をはじめ、不
+                                            動産の専門知識のみだけでなく「感性を磨き教養を深める」機会づくりに積極的に取り組んでおりま
+                                            す。こうした人財育成に取り組むと共に、一人ひとりが自身の成長を考え、自己研鑽に努める企業風
+                                            土の醸成を図っています。従業員満足度を高め、その結果、顧客満足度向上を目指します。</p>
+
+                                        <h5>一、我々全員が高潔かつ誠実で真摯な行動を実践し公明正大に企業活動を行い、社会から信頼
+                                            　　される企業を目指します。</h5>
+                                        <p>「人財」こそが当社の最大の財産だと考えています。資格取得、社内研修会やOJT研修をはじめ、不
+                                            動産の専門知識のみだけでなく「感性を磨き教養を深める」機会づくりに積極的に取り組んでおりま
+                                            す。こうした人財育成に取り組むと共に、一人ひとりが自身の成長を考え、自己研鑽に努める企業風
+                                            土の醸成を図っています。従業員満足度を高め、その結果、顧客満足度向上を目指します。</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="custom_col_12 columnn">
+                            <div class="columnn-inner">
+                                <div class="company-page-layer">
+                                    <div class="head">
+                                        <h3>代表挨拶</h3>
+                                    </div>
+                                    <div class="other-content">
+                                        <h5>“ 本来の姿にこだわる企業と誇りを胸に “</h5>
+                                        <p>私は、不動産業界で仲介を長く行う中、たくさんのオーナー様と出会い、光栄にも「ひとりひとりの人生」
+                                        というドラマを身近に感じ、寄り添わせていただいております。<br/>
+                                        マンション投資にもドラマがあります。そこには歴史があり喜怒哀楽があり、出会ったオーナー様との
+                                        会話やドラマを鮮明に覚えています。</p>
+
+                                        <p>マンションオーナー様との対話を通じて、ある日気付きました。『真面目な人が成功するのではない。』
+                                        プロの不動産業者と素人では、様々な面で圧倒的な「違い」や「不利な立場」があり、巧みに騙されている
+                                        ことも多く見受けられます。不動産業界ではあまりにも理不尽なことが多いことに葛藤してまいりました。</p>
+
+                                        <p>今まで出会ったオーナー様の「あなたに任せて良かった」「やっと肩の荷がおりてスッキリした」という
+                                        『一言と笑顔』があるから頑張れる。<br/>
+                                        綺麗事になりますが『利益より大切なことがある』そう確信しております。</p>
+
+                                        <p>利益追求は企業としては当たり前の使命ですが、綺麗事だけで事業活動に専念することそれを実践するのが
+                                        難しいことは重々理解しています。<br/>
+                                        激しい競争の中、目先の利益を優先し、それ以外をおざなりにする不動産業者が数多く存在している事実に
+                                        同じ葛藤を抱いている者達、情熱、志を持ったメンバーで満を持してゴードンエステイトを設立しました。
+                                        まだ歴史と呼べるものもない会社ではありますが、『私たちにしかできない事がある』と強い信念を持ち、
+                                        決して妥協をせず、これからも、さらに多くの皆様と共にドラマを築けるよう精進してまいります。</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="custom_col_12 columnn">
+                            <div class="columnn-inner">
+                                <div class="company-page-layer">
+                                    <div class="head">
+                                        <h3>会社概要</h3>
+                                    </div>
+                                    <div class="table-wrapper">
+                                        <table>
+                                            <tbody>
+                                                <tr>
+                                                    <td>会社名</td>
+                                                    <td>株式会社ゴードンエステイト</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>所在地</td>
+                                                    <td>〒532-0011
+                                                        大阪府大阪市淀川区西中島３丁目11-26　Auroraビル新大阪６F</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>代表者</td>
+                                                    <td>代表取締役　　橋本　樹</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>TEL</td>
+                                                    <td>【代表】06-6390-7500　【賃貸専用】06-6599-9546</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>FAX</td>
+                                                    <td>【代表】06-6390-7501　【賃貸専用】06-7632-3282</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>MAIL</td>
+                                                    <td>【代表】info@gordon-est.co.jp　【賃貸専用】chintai@gordon-est.co.jp</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>事業内容</td>
+                                                    <td>不動産の売買及び仲介<br/>
+                                                        不動産の賃貸、賃貸仲介及び賃貸管理<br/>
+                                                        不動産のコンサルティング<br/>
+                                                        不動産のリノベーション事業<br/>
+                                                        損害保険代理業<br/>
+                                                        その他宅地建物取引業全般</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>取引銀行</td>
+                                                    <td>北おおさか信用金庫　近畿産業信用組合　三井住友銀行　りそな銀行</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>免許</td>
+                                                    <td>宅地建物取引業免許　大阪府知事（１）第61426号</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>加盟団体</td>
+                                                    <td>公益社団法人　全日本不動産協会<br/>
+                                                        公益社団法人　不動産保証協会<br/>
+                                                        公益社団法人　近畿圏不動産流通機構<br/>
+                                                        大阪府宅建政治連盟　正会員</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
             <!-- COMPANY PAGE : END -->
         </section>
