--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
 	<title>Gordon Estate</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/responsive.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style_s.css">
+	<link rel="stylesheet" type="text/css" href="css/style_d.css">
 	<link rel="icon" href="images/favicon.png">
 </head>
 <body>
 	<div class="loader-wrapper"><div class="loader"></div></div>
 
-	<main class="main">
+	<main class="main top_page_header">
 		<!-- HEADER : START -->
-		<header class="site_header">
+		<header class="site_header top_page_header">
 			<div class="custom_container">
 				<a class="header_logo" href="index.html">
 					<img src="images/logo.png" alt="logo image">
@@ -32,7 +34,123 @@
 			</div>
 		</header>
 		<!-- HEADER : END -->
-
+		<!-- BANNER : START -->
+		<section class="banner_section">
+			<div class="custom_container">
+				<div class="banner_content">
+					<h1>RELIABLE ESTATE AGENT</h1>
+					<p>Estate Agency ＆Property Management</p>
+				</div>
+			</div>
+		</section>
+		<!-- BANNER : END -->
+		<!-- NEWS : START -->
+		<section class="news_section">
+			<div class="line_heading">
+				<h3>News</h3>
+				<p>新着情報</p>
+			</div>
+			<div class="news_content">
+				<div class="news_content_inner">
+					<div class="news_content_text">
+						<div class="news_table">
+							<div class="news_table_row">
+								<div class="news_table_th">
+									<p>2021/07/26</p>
+								</div>
+								<div class="news_table_td">
+									<p>夏季休業のお知らせ</p>
+								</div>
+							</div>
+							<div class="news_table_row">
+								<div class="news_table_th">
+									<p>2021/04/26</p>
+								</div>
+								<div class="news_table_td">
+									<p>GW休業のお知らせ</p>
+								</div>
+							</div>
+							<div class="news_table_row">
+								<div class="news_table_th">
+									<p>2020/12/06</p>
+								</div>
+								<div class="news_table_td">
+									<p>年末年始休業のお知らせ</p>
+								</div>
+							</div>
+							<div class="news_table_row">
+								<div class="news_table_th">
+									<p>2020/10/16</p>
+								</div>
+								<div class="news_table_td">
+									<p>全従業員PCR検査を実施しました</p>
+								</div>
+							</div>
+						</div>
+						<a href="#"><span>▶</span>新着情報</a>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- NEWS : END -->
+		<!-- NEWS : START -->
+		<section class="busniess_section">
+			<div class="line_heading">
+				<h3>Business</h3>
+				<p>事業案内</p>
+			</div>
+			<div class="busniess_box busniess_real_estate_box">
+				<div class="custom_container">
+					<div class="busniess_box_content">
+						<div class="custom_row">
+							<div class="custom_col_image">
+								<div class="busniess_image_box">
+									<img src="images/busniess_image_1.png">
+								</div>
+							</div>
+							<div class="custom_col_text">
+								<div class="busniess_image_text">
+									<h3>信頼の不動産取引</h3>
+									<p>投資用マンションを専門に売買仲介を行っております。<br>
+										確かな取引実績と豊富な経験を元に、取引を安全かつ
+										迅速に行いトラブルのない取引を実現しています。<br>
+										物件売却をご検討の方、「高値売却」「早期売却」は
+										当社にお任せください。<br>
+									仲介営業のエキスパートが全力で販売活動を行います。</p>
+									<a href="#"><span>▶</span>詳しくはこちら</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="busniess_box busniess_management_box">
+				<div class="custom_container">
+					<div class="busniess_box_content">
+						<div class="custom_row custom_row_reverse">
+							<div class="custom_col_image">
+								<div class="busniess_image_box">
+									<img src="images/busniess_image_2.png">
+								</div>
+							</div>
+							<div class="custom_col_text">
+								<div class="busniess_image_text">
+									<h3>安心の賃貸管理</h3>
+									<p>大阪、兵庫、京都の投資用マンションの賃貸管理事業を<br class="cpc">
+										展開しております。ご所有物件の空室・リフォーム・滞納<br class="cpc">
+										または収支改善など賃貸管理でお困りの方は、当社へ<br class="cpc">
+										ご相談ください。不動産投資の成功・失敗を左右するのは<br class="cpc">
+										「管理会社の選択」です。当社が成功できる賃貸経営を<br class="cpc">
+									実現いたします。賃貸管理のお悩みはすべて当社が解決します。</p>
+									<a href="#"><span>▶</span>詳しくはこちら</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- NEWS : END -->
 		<!-- FOOTER : START -->
 		<footer class="site_footer">
 			<div class="footer_text">
