--- a/company.html
+++ b/company.html
@@ -65,34 +65,50 @@
                     <div class="custom_row">
                         <div class="custom_col_12 columnn">
                             <div class="columnn-inner">
-                                <div class="company-page-layer">
+                                <div class="company-page-layer pride-content">
                                     <div class="head">
                                         <h3>経営理念</h3>
                                     </div>
                                     <div class="other-content">
-                                        <h4>情熱が創るソリューション</h4>
+                                        <h4>情熱が<span>創</span>るソリューション</h4>
 
-                                        <h5>一、不動産投資に新しい価値を生み出し、お客様に最適なソリューションと圧倒的信頼感を
-                                            　　提供します。</h5>
+                                        <div class="regular-head2">
+                                            <div class="regular-head2-wrapper">
+                                                <h2>不動産投資に新しい価値を生み出し、お客様に最適なソリューションと圧倒的信頼感を
+                                                    　　提供します。</h2>
+                                            </div>
+                                        </div>
                                         <p>景気や市況に左右されやすい不動産価値とその運用方法。所有している不動産を今後どのように運用
                                             していったらいいのか、どれくらいの価格で売却できるのか、どのような方法で売却をするのか、
                                             不動産をお持ちの方なら誰もが一度は考え悩む事です。当社では、そんなお客様に寄り添い豊富な経
                                             験と情報をもとに的確なご提案を行い、同時に圧倒的信頼関係を築けるよう努めてまいります。当社
                                             スタッフとの出会いから始まる付加価値を、今までにない圧倒的信頼感をご体感ください。</p>
 
-                                        <h5>一、お客様に満足されることは当然と考え、想像を超えるサービス、感動を提供します。</h5>
+                                        <div class="regular-head2">
+                                            <div class="regular-head2-wrapper">
+                                                <h2>お客様に満足されることは当然と考え、想像を超えるサービス、感動を提供します。</h2>
+                                            </div>
+                                        </div>
                                         <p>当社でお客様が経験されるもの、それは不安が解消された心地よさ、満ち足りた幸福感そしてお客様
                                             が言葉にされない願望やニーズをも先読みしてお応えするサービスの心です。その為に現状に満足せ
                                             ず、常に「感性」を磨き向上意識を持って仕事をします。</p>
 
-                                        <h5>一、全従業員が日々研鑽に励み、プロフェッショナルとして自信と誇りを持って行動をします。</h5>
+                                        <div class="regular-head2">
+                                            <div class="regular-head2-wrapper">
+                                                <h2>全従業員が日々研鑽に励み、プロフェッショナルとして自信と誇りを持って行動をします。</h2>
+                                            </div>
+                                        </div>
                                         <p>「人財」こそが当社の最大の財産だと考えています。資格取得、社内研修会やOJT研修をはじめ、不
                                             動産の専門知識のみだけでなく「感性を磨き教養を深める」機会づくりに積極的に取り組んでおりま
                                             す。こうした人財育成に取り組むと共に、一人ひとりが自身の成長を考え、自己研鑽に努める企業風
                                             土の醸成を図っています。従業員満足度を高め、その結果、顧客満足度向上を目指します。</p>
 
-                                        <h5>一、我々全員が高潔かつ誠実で真摯な行動を実践し公明正大に企業活動を行い、社会から信頼
-                                            　　される企業を目指します。</h5>
+                                        <div class="regular-head2">
+                                            <div class="regular-head2-wrapper">
+                                                <h2>我々全員が高潔かつ誠実で真摯な行動を実践し公明正大に企業活動を行い、社会から信頼
+                                                    　　される企業を目指します。</h2>
+                                            </div>
+                                        </div>
                                         <p>「人財」こそが当社の最大の財産だと考えています。資格取得、社内研修会やOJT研修をはじめ、不
                                             動産の専門知識のみだけでなく「感性を磨き教養を深める」機会づくりに積極的に取り組んでおりま
                                             す。こうした人財育成に取り組むと共に、一人ひとりが自身の成長を考え、自己研鑽に努める企業風
@@ -109,7 +125,12 @@
                                         <h3>代表挨拶</h3>
                                     </div>
                                     <div class="other-content">
-                                        <h5>“ 本来の姿にこだわる企業と誇りを胸に “</h5>
+
+                                        <div class="regular-head2">
+                                            <div class="regular-head2-wrapper">
+                                                <h2>“ 本来の姿にこだわる企業と誇りを胸に “</h2>
+                                            </div>
+                                        </div>
                                         <p>私は、不動産業界で仲介を長く行う中、たくさんのオーナー様と出会い、光栄にも「ひとりひとりの人生」
                                         というドラマを身近に感じ、寄り添わせていただいております。<br/>
                                         マンション投資にもドラマがあります。そこには歴史があり喜怒哀楽があり、出会ったオーナー様との
