--- a/index.html
+++ b/index.html
@@ -151,6 +151,61 @@
 			</div>
 		</section>
 		<!-- NEWS : END -->
+		<!-- TRADING : END -->
+		<section class="trading_section">
+			<div class="custom_container">
+				<div class="line_heading">
+					<h3>Trading Results</h3>
+					<p>最新売買の実績</p>
+				</div>
+				<div class="trading_content">
+					<div class="custom_row">
+						<div class="custom_col_4">
+							<div class="trading_box">
+								<div class="trading_image">
+									<img src="images/tranding_image_1.png" align="tranding image">
+								</div>
+							</div>
+							<div class="trading_text">
+								<p>エステムコート難波<br>
+								サウスプレイスⅢラ・パーク</p>
+							</div>
+						</div>
+						<div class="custom_col_4">
+							<div class="trading_box">
+								<div class="trading_image">
+									<img src="images/tranding_image_2.png" align="tranding image">
+								</div>
+							</div>
+							<div class="trading_text">
+								<p>エステムプラザ京都聚楽第 粋邸</p>
+							</div>
+						</div>
+						<div class="custom_col_4">
+							<div class="trading_box">
+								<div class="trading_image">
+									<img src="images/tranding_image_3.png" align="tranding image">
+								</div>
+							</div>
+							<div class="trading_text">
+								<p>エステムコート三宮駅前ラ・ドゥー</p>
+							</div>
+						</div>
+						<div class="custom_col_4">
+							<div class="trading_box">
+								<div class="trading_image">
+									<img src="images/tranding_image_4.png" align="tranding image">
+								</div>
+							</div>
+							<div class="trading_text">
+								<p>エステムコート梅田・天神橋Ⅱグラシオ</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- NEWS : END -->
 		<!-- FOOTER : START -->
 		<footer class="site_footer">
 			<div class="footer_text">
