--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 	<div class="loader-wrapper"><div class="loader"></div></div>
 
 	<main class="main top_page_header">
-		<!-- HEADER : START -->
 		<header class="site_header top_page_header">
 			<div class="custom_container">
 				<a class="header_logo" href="index.html">
@@ -33,8 +32,6 @@
 				</nav>
 			</div>
 		</header>
-		<!-- HEADER : END -->
-		<!-- BANNER : START -->
 		<section class="banner_section">
 			<div class="custom_container">
 				<div class="banner_content">
@@ -43,8 +40,6 @@
 				</div>
 			</div>
 		</section>
-		<!-- BANNER : END -->
-		<!-- NEWS : START -->
 		<section class="news_section">
 			<div class="line_heading">
 				<h3>News</h3>
@@ -92,8 +87,6 @@
 				</div>
 			</div>
 		</section>
-		<!-- NEWS : END -->
-		<!-- NEWS : START -->
 		<section class="busniess_section">
 			<div class="line_heading">
 				<h3>Business</h3>
@@ -112,9 +105,9 @@
 								<div class="busniess_image_text">
 									<h3>信頼の不動産取引</h3>
 									<p>投資用マンションを専門に売買仲介を行っております。<br>
-										確かな取引実績と豊富な経験を元に、取引を安全かつ
+										確かな取引実績と豊富な経験を元に、取引を安全かつ<br>
 										迅速に行いトラブルのない取引を実現しています。<br>
-										物件売却をご検討の方、「高値売却」「早期売却」は
+										物件売却をご検討の方、「高値売却」「早期売却」は<br>
 										当社にお任せください。<br>
 									仲介営業のエキスパートが全力で販売活動を行います。</p>
 									<a href="#"><span>▶</span>詳しくはこちら</a>
@@ -136,11 +129,11 @@
 							<div class="custom_col_text">
 								<div class="busniess_image_text">
 									<h3>安心の賃貸管理</h3>
-									<p>大阪、兵庫、京都の投資用マンションの賃貸管理事業を<br class="cpc">
-										展開しております。ご所有物件の空室・リフォーム・滞納<br class="cpc">
-										または収支改善など賃貸管理でお困りの方は、当社へ<br class="cpc">
-										ご相談ください。不動産投資の成功・失敗を左右するのは<br class="cpc">
-										「管理会社の選択」です。当社が成功できる賃貸経営を<br class="cpc">
+									<p>大阪、兵庫、京都の投資用マンションの賃貸管理事業を<br>
+										展開しております。ご所有物件の空室・リフォーム・滞納<br>
+										または収支改善など賃貸管理でお困りの方は、当社へ<br>
+										ご相談ください。不動産投資の成功・失敗を左右するのは<br>
+										「管理会社の選択」です。当社が成功できる賃貸経営を<br>
 									実現いたします。賃貸管理のお悩みはすべて当社が解決します。</p>
 									<a href="#"><span>▶</span>詳しくはこちら</a>
 								</div>
@@ -150,25 +143,23 @@
 				</div>
 			</div>
 		</section>
-		<!-- NEWS : END -->
-		<!-- TRADING : END -->
 		<section class="trading_section">
-			<div class="custom_container">
-				<div class="line_heading">
-					<h3>Trading Results</h3>
-					<p>最新売買の実績</p>
-				</div>
-				<div class="trading_content">
+			<div class="line_heading">
+				<h3>Trading Results</h3>
+				<p>最新売買の実績</p>
+			</div>
+			<div class="trading_content">
+				<div class="custom_container">
 					<div class="custom_row">
 						<div class="custom_col_4">
 							<div class="trading_box">
 								<div class="trading_image">
 									<img src="images/tranding_image_1.png" align="tranding image">
 								</div>
-							</div>
-							<div class="trading_text">
-								<p>エステムコート難波<br>
-								サウスプレイスⅢラ・パーク</p>
+								<div class="trading_text">
+									<p>エステムコート難波<br>
+									サウスプレイスⅢラ・パーク</p>
+								</div>
 							</div>
 						</div>
 						<div class="custom_col_4">
@@ -176,9 +167,9 @@
 								<div class="trading_image">
 									<img src="images/tranding_image_2.png" align="tranding image">
 								</div>
-							</div>
-							<div class="trading_text">
-								<p>エステムプラザ京都聚楽第 粋邸</p>
+								<div class="trading_text">
+									<p>エステムプラザ京都聚楽第 粋邸</p>
+								</div>
 							</div>
 						</div>
 						<div class="custom_col_4">
@@ -186,9 +177,9 @@
 								<div class="trading_image">
 									<img src="images/tranding_image_3.png" align="tranding image">
 								</div>
-							</div>
-							<div class="trading_text">
-								<p>エステムコート三宮駅前ラ・ドゥー</p>
+								<div class="trading_text">
+									<p>エステムコート三宮駅前ラ・ドゥー</p>
+								</div>
 							</div>
 						</div>
 						<div class="custom_col_4">
@@ -196,17 +187,58 @@
 								<div class="trading_image">
 									<img src="images/tranding_image_4.png" align="tranding image">
 								</div>
+								<div class="trading_text">
+									<p>エステムコート梅田・天神橋Ⅱグラシオ</p>
+								</div>
 							</div>
-							<div class="trading_text">
-								<p>エステムコート梅田・天神橋Ⅱグラシオ</p>
+						</div>
+					</div>
+					<a href="#"><span>▶</span> その他の実績はこちら</a>
+				</div>
+			</div>
+		</section>
+		<section class="contact_section">
+			<div class="custom_container">
+				<div class="line_heading">
+					<h3>Contact</h3>
+					<p>お問い合わせ</p>
+				</div>
+				<div class="howto-contact-content">
+					<div class="custom_row">
+						<div class="custom_col_6 columnn">
+							<div class="content-bx">
+								<div class="head">
+									<div class="icon">
+										<img src="images/icon-call-blue.png">
+									</div>
+									<div class="txt">
+										<h4>電話でお問い合わせ</h4>
+									</div>
+								</div>
+								<div class="content-number">
+									<p>06-6390-7500</p>
+								</div>
+							</div>
+						</div>
+						<div class="custom_col_6 columnn">
+							<div class="content-bx">
+								<div class="head">
+									<div class="icon">
+										<img src="images/icon-mail-blue.png">
+									</div>
+									<div class="txt">
+										<h4>メールでお問い合わせ</h4>
+									</div>
+								</div>
+								<div class="content-mail">
+									<p>お問い合わせフォームへ</p>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<!-- NEWS : END -->
-		<!-- FOOTER : START -->
 		<footer class="site_footer">
 			<div class="footer_text">
 				<div class="custom_container">
@@ -246,7 +278,6 @@
 				</div>
 			</div>
 		</footer>
-		<!-- FOOTER : END -->
 	</main>
 
 	<script src="js/jquery.min.js"></script>
