design changes in home page

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 									</div>
 								</div>
 								<div class="content-number">
-									<p>06-6390-7500</p>
+									<a href="tel:0663907500">06-6390-7500</a>
 								</div>
 							</div>
 						</div>
@@ -230,9 +230,9 @@
 										<h4>メールでお問い合わせ</h4>
 									</div>
 								</div>
-								<div class="content-mail">
+								<a href="#" class="content-mail">
 									<p>お問い合わせフォームへ</p>
-								</div>
+								</a>
 							</div>
 						</div>
 					</div>
