Resolve UnderLine text @SanjayBarad

--- a/company.html
+++ b/company.html
@@ -63,7 +63,7 @@
                                 <h4>情熱が<span>創</span>るソリューション</h4>
 
                                 <div class="underline_heading">
-                                    <h2>
+                                    <h2 class="jquery_underline_element">
                                         不動産投資に新しい価値を生み出し、お客様に最適なソリューションと圧倒的信頼感を提供します。
                                     </h2>
                                 </div>
@@ -74,14 +74,14 @@
                                     スタッフとの出会いから始まる付加価値を、今までにない圧倒的信頼感をご体感ください。</p>
 
                                 <div class="underline_heading">
-                                    <h2>お客様に満足されることは当然と考え、想像を超えるサービス、感動を提供します。</h2>
+                                    <h2 class="jquery_underline_element">お客様に満足されることは当然と考え、想像を超えるサービス、感動を提供します。</h2>
                                 </div>
                                 <p>当社でお客様が経験されるもの、それは不安が解消された心地よさ、満ち足りた幸福感そしてお客様
                                     が言葉にされない願望やニーズをも先読みしてお応えするサービスの心です。その為に現状に満足せ
                                     ず、常に「感性」を磨き向上意識を持って仕事をします。</p>
 
                                 <div class="underline_heading">
-                                    <h2>全従業員が日々研鑽に励み、プロフェッショナルとして自信と誇りを持って行動をします。</h2>
+                                    <h2 class="jquery_underline_element">全従業員が日々研鑽に励み、プロフェッショナルとして自信と誇りを持って行動をします。</h2>
                                 </div>
                                 <p>「人財」こそが当社の最大の財産だと考えています。資格取得、社内研修会やOJT研修をはじめ、不
                                     動産の専門知識のみだけでなく「感性を磨き教養を深める」機会づくりに積極的に取り組んでおりま
@@ -89,7 +89,7 @@
                                     土の醸成を図っています。従業員満足度を高め、その結果、顧客満足度向上を目指します。</p>
 
                                 <div class="underline_heading">
-                                    <h2>我々全員が高潔かつ誠実で真摯な行動を実践し公明正大に企業活動を行い、社会から信頼される企業を目指します。</h2>
+                                    <h2 class="jquery_underline_element">我々全員が高潔かつ誠実で真摯な行動を実践し公明正大に企業活動を行い、社会から信頼される企業を目指します。</h2>
                                 </div>
                                 <p>「人財」こそが当社の最大の財産だと考えています。資格取得、社内研修会やOJT研修をはじめ、不
                                     動産の専門知識のみだけでなく「感性を磨き教養を深める」機会づくりに積極的に取り組んでおりま
