--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 	<title>Gordon Estate</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="css/responsive-tabs.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/style_s.css">
-	<link rel="stylesheet" type="text/css" href="css/style_d.css">
 	<link rel="icon" href="images/favicon.png">
 </head>
 <body>
@@ -283,8 +282,10 @@
 	</main>
 
 	<script src="js/jquery.min.js"></script>
-	<script src="js/fonts-awesome-5.js"></script>
-	<script src="js/intersection-observer-polyfill.js"></script>
+    <script src="js/fonts-awesome-5.js"></script>
+    <script src="js/intersection-observer-polyfill.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
+    <script src="js/responsiveTabs.min.js"></script>
 	<script src="js/custom.js"></script>
 	<script type="text/javascript">
 		$(window).on('load resize scroll', function(){
