make design changes.

--- a/howto.html
+++ b/howto.html
@@ -8,14 +8,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="images/favicon.png">
 </head>
-
 <body>
-    <div class="loader-wrapper">
-        <div class="loader"></div>
-    </div>
-
+    <div class="loader-wrapper"><div class="loader"></div></div>
     <main class="main">
-
         <header class="site_header">
             <div class="custom_container">
                 <a class="header_logo" href="index.html">
@@ -35,19 +30,16 @@
                 </nav>
             </div>
         </header>
-
         <section class="regular-banner">
             <div class="regular-banner-wrapper">
                 <img src="images/purchase-sale-banner.jpg" class="regular-banner-img" />
             </div>
         </section>
-
         <div class="regular-head margin-top-minus">
             <div class="regular-head-wrapper">
                 <h2>ご購入・ご売却について</h2>
             </div>
         </div>
-
         <section class="purchase-sale-topbar-bttns">
             <div class="custom_container">
                 <div class=" custom_row">
@@ -355,7 +347,6 @@
                 </div>
             </div>
         </section>
-
         <footer class="site_footer">
             <div class="footer_text">
                 <div class="custom_container">
@@ -396,12 +387,10 @@
             </div>
         </footer>
     </main>
-
     <script src="js/jquery.min.js"></script>
     <script src="js/fonts-awesome-5.js"></script>
     <script src="js/intersection-observer-polyfill.js"></script>
     <script src="js/responsiveTabs.min.js"></script>
     <script src="js/custom.js"></script>
 </body>
-
 </html>
