--- a/sales.html
+++ b/sales.html
@@ -8,14 +8,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="images/favicon.png">
 </head>
-
 <body>
-    <div class="loader-wrapper">
-        <div class="loader"></div>
-    </div>
-
+    <div class="loader-wrapper"><div class="loader"></div></div>
     <main class="main">
-
         <header class="site_header">
             <div class="custom_container">
                 <a class="header_logo" href="index.html">
@@ -35,19 +30,16 @@
                 </nav>
             </div>
         </header>
-
         <section class="regular-banner">
             <div class="regular-banner-wrapper">
                 <img src="images/sales-page-banner.jpg" class="regular-banner-img" />
             </div>
         </section>
-
         <div class="regular-head margin-top-minus">
             <div class="regular-head-wrapper">
                 <h2>賃貸管理</h2>
             </div>
         </div>
-
         <section class="sales-management-section">
             <div class="custom_container">
                 <div class="underline_heading">
@@ -61,7 +53,6 @@
                 </div>
             </div>
         </section>
-
         <section class="sales-fee-section">
             <div class="sales-fee-wrapper">
                 <div class="custom_container">
@@ -71,7 +62,6 @@
                 </div>
             </div>
         </section>
-
         <section class="sales-rent-section">
             <div class="custom_container">
                 <div class="custom_row">
@@ -113,7 +103,6 @@
                 </div>
             </div>
         </section>
-
         <section class="sales-service-section">
             <div class="sales-service-head">
                 <div class="custom_container">
@@ -193,7 +182,6 @@
                 </div>
             </div>
         </section>
-
         <section class="howto-contact-section">
             <div class="custom_container">
                 <div class="howto-contact-sub">
@@ -237,7 +225,6 @@
                 </div>
             </div>
         </section>
-
         <footer class="site_footer">
             <div class="footer_text">
                 <div class="custom_container">
@@ -277,14 +264,11 @@
                 </div>
             </div>
         </footer>
-
     </main>
-
     <script src="js/jquery.min.js"></script>
     <script src="js/fonts-awesome-5.js"></script>
     <script src="js/intersection-observer-polyfill.js"></script>
     <script src="js/responsiveTabs.min.js"></script>
     <script src="js/custom.js"></script>
 </body>
-
 </html>
