--- a/company.html
+++ b/company.html
@@ -8,14 +8,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="images/favicon.png">
 </head>
-
 <body>
-    <div class="loader-wrapper">
-        <div class="loader"></div>
-    </div>
-
+    <div class="loader-wrapper"><div class="loader"></div></div>
     <main class="main">
-
         <header class="site_header">
             <div class="custom_container">
                 <a class="header_logo" href="index.html">
@@ -35,19 +30,16 @@
                 </nav>
             </div>
         </header>
-
         <section class="regular-banner">
             <div class="regular-banner-wrapper">
                 <img src="images/company-page-banner.jpg" class="regular-banner-img" />
             </div>
         </section>
-
         <div class="regular-head margin-top-minus">
             <div class="regular-head-wrapper">
                 <h2>会社案内</h2>
             </div>
         </div>
-
         <section class="company-page-section">
             <div class="custom_container">
                 <div class="company-page-layer pride-content">
@@ -198,7 +190,6 @@
                 </div>
             </div>
         </section>
-
         <footer class="site_footer">
             <div class="footer_text">
                 <div class="custom_container">
@@ -239,7 +230,6 @@
             </div>
         </footer>
     </main>
-
     <script src="js/jquery.min.js"></script>
     <script src="js/fonts-awesome-5.js"></script>
     <script src="js/intersection-observer-polyfill.js"></script>
