--- a/faq.html
+++ b/faq.html
@@ -9,12 +9,8 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="images/favicon.png">
 </head>
-
 <body>
-    <div class="loader-wrapper">
-        <div class="loader"></div>
-    </div>
-
+    <div class="loader-wrapper"><div class="loader"></div></div>
     <main class="main">
         <header class="site_header">
             <div class="custom_container">
@@ -166,7 +162,6 @@
             </div>
         </footer>
     </main>
-
     <script src="js/jquery.min.js"></script>
     <script src="js/fonts-awesome-5.js"></script>
     <script src="js/intersection-observer-polyfill.js"></script>
