Complete Company and Sales Page Design @SanjayBarad

--- a/sales.html
+++ b/sales.html
@@ -182,6 +182,21 @@
                 </div>
             </div>
         </section>
+        <section class="sales-remodeling-section">
+            <div class="custom_container">
+                <div class="head">
+                    <div class="underline_heading">
+                        <h2><span>室内リフォーム画像をお持ちのデ</span><span>バイスで確認して頂けます。</span></h2>
+                        <p>室内リフォームのビフォーアフターをお手持ちのパソコンやタブレット、スマートフォンから
+                            ３６０度カメラ撮影の画像でご確認していただくことができます。<br/>
+                            現地に行くことなく、自宅やオフィスから現場の状況を把握していただくことが出来ます！</p>
+                    </div>
+                    <div class="big-img">
+                        <img src="images/remodeling-img.jpg"/>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="howto-contact-section">
             <div class="custom_container">
                 <div class="howto-contact-sub">
