--- a/company.html
+++ b/company.html
@@ -84,6 +84,11 @@
                                     動産の専門知識のみだけでなく「感性を磨き教養を深める」機会づくりに積極的に取り組んでおりま
                                     す。こうした人財育成に取り組むと共に、一人ひとりが自身の成長を考え、自己研鑽に努める企業風
                                     土の醸成を図っています。従業員満足度を高め、その結果、顧客満足度向上を目指します。</p>
+
+                                <div class="organization-detail">
+                                    <p>株式会社ゴードンエステイト<br/>
+                                        代表取締役 <img src="images/author-name.png"/></p>
+                                </div>
                             </div>
                         </div>
                     </div>
