complete work page responsive @SanjayBarad

--- a/work.html
+++ b/work.html
@@ -53,11 +53,119 @@
                         <div class="layer-content">
                             <h4>住所　：　名古屋市丸の内２丁目6-6</h4>
                             <ul>
-                                <li><span>築年数　：　平成27年</span></li>
-                                <li><span>階層　：　12階</span></li>
-                                <li><span>広さ　：　22.42㎡</span></li>
-                                <li><span>ご職業　：　開業医</span></li>
-                                <li><span>ご年齢　：　50代</span></li>
+                                <li>築年数　：　平成27年</li>
+                                <li>階層　：　12階</li>
+                                <li>広さ　：　22.42㎡</li>
+                                <li>ご職業　：　開業医</li>
+                                <li>ご年齢　：　50代</li>
+                            </ul>
+                            <div class="para">
+                                <h4>ご購入・ご売却の経緯</h4>
+                                <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
+                                    トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
+                                    ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
+                                    。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="achievment-layer">
+                    <div class="layer-head">
+                        <h3>プレサンス丸の内城雅</h3>
+                    </div>
+                    <div class="layer-flex">
+                        <div class="layer-img">
+                            <img src="images/achievment-layer01.jpg" />
+                        </div>
+                        <div class="layer-content">
+                            <h4>住所　：　名古屋市丸の内２丁目6-6</h4>
+                            <ul>
+                                <li>築年数　：　平成27年</li>
+                                <li>階層　：　12階</li>
+                                <li>広さ　：　22.42㎡</li>
+                                <li>ご職業　：　開業医</li>
+                                <li>ご年齢　：　50代</li>
+                            </ul>
+                            <div class="para">
+                                <h4>ご購入・ご売却の経緯</h4>
+                                <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
+                                    トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
+                                    ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
+                                    。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="achievment-layer">
+                    <div class="layer-head">
+                        <h3>プレサンス丸の内城雅</h3>
+                    </div>
+                    <div class="layer-flex">
+                        <div class="layer-img">
+                            <img src="images/achievment-layer01.jpg" />
+                        </div>
+                        <div class="layer-content">
+                            <h4>住所　：　名古屋市丸の内２丁目6-6</h4>
+                            <ul>
+                                <li>築年数　：　平成27年</li>
+                                <li>階層　：　12階</li>
+                                <li>広さ　：　22.42㎡</li>
+                                <li>ご職業　：　開業医</li>
+                                <li>ご年齢　：　50代</li>
+                            </ul>
+                            <div class="para">
+                                <h4>ご購入・ご売却の経緯</h4>
+                                <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
+                                    トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
+                                    ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
+                                    。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="achievment-layer">
+                    <div class="layer-head">
+                        <h3>プレサンス丸の内城雅</h3>
+                    </div>
+                    <div class="layer-flex">
+                        <div class="layer-img">
+                            <img src="images/achievment-layer01.jpg" />
+                        </div>
+                        <div class="layer-content">
+                            <h4>住所　：　名古屋市丸の内２丁目6-6</h4>
+                            <ul>
+                                <li>築年数　：　平成27年</li>
+                                <li>階層　：　12階</li>
+                                <li>広さ　：　22.42㎡</li>
+                                <li>ご職業　：　開業医</li>
+                                <li>ご年齢　：　50代</li>
+                            </ul>
+                            <div class="para">
+                                <h4>ご購入・ご売却の経緯</h4>
+                                <p>テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキス
+                                    トが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入
+                                    ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります
+                                    。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキ</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="achievment-layer">
+                    <div class="layer-head">
+                        <h3>プレサンス丸の内城雅</h3>
+                    </div>
+                    <div class="layer-flex">
+                        <div class="layer-img">
+                            <img src="images/achievment-layer01.jpg" />
+                        </div>
+                        <div class="layer-content">
+                            <h4>住所　：　名古屋市丸の内２丁目6-6</h4>
+                            <ul>
+                                <li>築年数　：　平成27年</li>
+                                <li>階層　：　12階</li>
+                                <li>広さ　：　22.42㎡</li>
+                                <li>ご職業　：　開業医</li>
+                                <li>ご年齢　：　50代</li>
                             </ul>
                             <div class="para">
                                 <h4>ご購入・ご売却の経緯</h4>
